# vibe-idler

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: release.yml
scripts/: bundle-macos.sh  launcher.swift  release-macos.sh
src/: app.rs  audio.rs  input.rs  main.rs  save.rs
src/data/: commit_messages.rs  event_templates.rs  mod.rs  pivot_stories.rs  project_names.rs
src/game/: achievements.rs  agents.rs  economy.rs  events.rs  formulas.rs  mod.rs  offline.rs  prestige.rs  projects.rs  state.rs  tech_tree.rs  tick.rs
src/ui/: mod.rs  theme.rs
src/ui/panels/: agents.rs  agents_modal.rs  commit_log.rs  event_log.rs  finances.rs  header.rs  mod.rs  projects.rs  projects_modal.rs  shop.rs  tech_tree_modal.rs  victory_modal.rs
